1. Метод .of [#380315]