@@ -11,7 +11,7 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<Task> tasks = Arrays.asList(
+        List<Task> tasks = List.of(
                 new Task("1", "First"),
                 new Task("2", "Second"),
                 new Task("2", "Second")
